--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
     "styled-components": "^5.3.5",
     "stylis": "^4.1.0",
     "stylis-plugin-rtl": "^2.1.1"
